# Glade-example

./: CMakeLists.txt  LICENSE  README.md  main.cpp  mainWindow.glade
